# guessinggame_ttv

./: .coveragerc  .flake8  .gitignore  LICENSE  Pipfile  README.md  guessinggame_ttv.spec  mypy.ini  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: build.yml  pr.yml
src/guessinggame_ttv/: __main__.py  _version.py  bot.py  database.py  game.py  interface.py  main.py  utils.py
templates/: bot.conf  wordlist.template
tests/: conftest.py  test_bot.py  test_database.py  test_game.py  test_main.py
tools/: build_release.py
