[metadata]
name = GuessingGame_TTV
description = A Twitch bot that runs a word-guessing game
author = Giles Johnson
license = BSD-3-Clause
license_files = LICENSE
platforms = linux, osx, win32

[options]
packages =
    guessinggame_ttv
install_requires =
    twitchio>=2.4
python_requires = >=3.10
package_dir =
    =src
zip_safe = no
